test/spec_vectors/simd_lane/fail/module_52.wat
(module (func (result f64) (f64x2.extract_lane 255 (v128.const f64x2 0 0))))